# DeltaControl

./: README.md  package.xml  setup.py
config/: params.yaml
delta_firmware/: package.xml  setup.cfg  setup.py
delta_firmware/config/: params.yaml
delta_firmware/delta_firmware/: README.md  delta_firmware_api.py  delta_firmware_control.py  delta_firmware_motion.py
delta_firmware/launch/: delta_robot.launch.py
delta_robot_isaacsim/: Trajectory_plan.py  delta_control.py  delta_motion.py  setup.cfg  setup.py
delta_robot_isaacsim/config/: params.yaml
delta_robot_isaacsim/delta_robot_isaacsim/: Trajectory_plan.py  delta_control.py
delta_robot_isaacsim/launch/: delta_robot.launch.py
test/: README.md  __init__.py  angle_controller.py  main_controller.py  test_trajectory.py  trajectory_planner.py  yolo_rgbd_mean_depth_node.py
test/delta_robot_isaacsim/delta_robot_isaacsim/: delta_motion.py
yolo/: package.xml  setup.py  yoloboundingbox.py
yolo/config/: yolo_params.yaml
yolo/launch/: yolo_detection.launch.py  yolo_with_params.launch.py
yolo/yolo/: yoloboundingbox.py
